@@ -262,10 +262,16 @@ class Page(object):
         """ Get the usage for the object """
         return self._get_section(r'\usage')
 
-    def iteritems(self):
+    def items(self):
         """ iterator through the sections names and content
         in the documentation Page. """
-        return self.sections.iteritems
+        return self.sections.items()
+
+    def iteritems(self):
+        """ iterator through the sections names and content
+        in the documentation Page. (deprecated, use items()) """
+        warnings.warn('Use the method items().', DeprecationWarning)
+        return self.sections.items()
 
     def to_docstring(
             self,
